<resources>
    <string name="app_name">エリクラ</string>
    <string name="common_captions_apiError">エラーが発生しました。</string>
    <string name="common_messages_apiError">APIの実行に失敗しました。\n時間をおいて再実施をお願いいたします。</string>
    <string name="common_buttons_close">閉じる</string>
    <string name="button_ok">決定</string>
    <string name="button_cancel">キャンセル</string>
    <string name="start_startWithoutLogin"><a href="">スキップして近くのお仕事を探す</a></string>
    <string name="login_caption">ログイン</string>
    <string name="login_autoLogin">次回から自動ログインする</string>
    <string name="login_remindPassword"><a href="">パスワードをお忘れですか？</a></string>
    <string name="login_mailUnreachable"><a href="">仮登録メールが届きませんか？</a></string>
    <string name="registered_user"><a href="">エリクラに登録済みの方はこちら</a></string>
    <string name="registerEmail_caption">メールアドレスを教えてください。</string>
    <string name="registerEmail_accept">※メール受信制限をされている方は「erikura.net」からのメール受信を許可してください。</string>
    <string name="registerEmail_terms_of_service"><a href="">利用規約</a></string>
    <string name="registerEmail_comma">、\n</string>
    <string name="registerEmail_privacy_policy"><a href="">%1$s</a></string>
    <string name="registerEmail_agree">\nに同意して</string>
    <string name="registerEmailFinished_registerUnfinished">まだ会員登録は\n完了しておりません</string>
    <string name="registerEmailFinished_sendEmail">ご入力いただいたメールアドレス宛に確認メールをお送りしました。</string>
    <string name="registerEmailFinished_clickEmailLink">お届けしたメール内の\nURLをクリックして\n会員登録を続けてください。</string>
    <string name="registerEmailFinished_limit">※メールに記載された登録URLの有効期限は6時間です。\n有効期限が切れた場合は再度新規会員登録を実施してください。</string>
    <string name="registerEmailFinished_accept">※迷惑メールフォルダに振り分けられていることもありますのでご確認ください。\nまた、「@erikura.net」ドメインからの受信を可能に設定してください。</string>
    <string name="registerPassword_caption">パスワードを設定して下さい。</string>
    <string name="registerPassword_notice">※6文字以上の半角英数で入力してください。</string>
    <string name="registerName_caption">お名前を教えてください。</string>
    <string name="registerBirthday_caption">生年月日を教えてください。</string>
    <string name="registerBirthday_notice">※エリクラは18歳未満の方はご利用できません。</string>
    <string name="registerGender_caption">性別を教えてください。</string>
    <string name="registerAddress_caption">ご住所を教えてください。</string>
    <string name="registerAddress_notice">※ハイフンは不要です。</string>
    <string name="registerCellPhone_caption">携帯電話の番号を教えてください。\n後ほど携帯電話番号認証を行います。</string>
    <string name="registerPhone_notice">※ハイフンは不要です。</string>
    <string name="registerJobStatus_caption">ご職業を教えてください。</string>
    <string name="registerWishWork_caption">どんなお仕事がやってみたいか教えてください。（複数回答可）</string>
    <string name="smsVerify_title">携帯電話番号認証</string>
    <string name="smsVerify_passcode_resend">パスコードを再送する</string>
    <string name="smsVerify_register_phone">電話番号を編集する</string>
    <string name="smsVerify_caption">エリクラを安全にご利用いただくために携帯電話番号認証をお願いしております。</string>
    <string name="smsVerify_not_mobilePhone_format">ご登録の電話番号が携帯電話番号ではないようです。”電話番号を編集する”リンクからご登録の電話番号を携帯電話番号（070、080、090から始まる番号）に変更してください。</string>
    <string name="smsVerify_success_title">電話番号を更新しました</string>
    <string name="send_reset_password_caption">ご登録いただいたメールアドレスを入力してください。\nメールアドレス宛にパスワード変更ページのURLが記載されたメールを送信します。</string>
    <string name="send_reset_password_button">パスワード再設定メールを送信する</string>
    <string name="sended_reset_password_caption">まだパスワード再設定は\n完了しておりません</string>
    <string name="sended_reset_password_sendEmail">ご入力いただいたメールアドレス宛に確認メールをお送りしました。</string>
    <string name="sended_reset_password_clickEmailLink">お届けしたメール内の\nURLをクリックして\nパスワード再設定を続けてください。</string>
    <string name="sended_reset_password_limit">※メールに記載された登録URLの有効期限は10分間です。\n有効期限が切れた場合は再度パスワード再設定を実施してください。</string>
    <string name="sended_reset_password_accept">※迷惑メールフォルダに振り分けられていることもありますのでご確認ください。\nまた、「@erikura.net」ドメインからの受信を可能に設定してください。</string>
    <string name="send_reset_email_title">メールアドレス変更</string>
    <string name="send_reset_email_caption">新しいメールアドレスを入力してください。\n入力したメールアドレス宛に認証用のURLが記載されたメールを送信します。\nURLをクリックするとメールアドレスの変更が完了します。</string>
    <string name="send_reset_email_button">確認メールを送信する</string>
    <string name="sended_reset_email_caption">まだメールアドレス変更は\n完了しておりません</string>
    <string name="sended_reset_email_sendEmail">ご入力いただいたメールアドレス宛に確認メールをお送りしました。</string>
    <string name="sended_reset_email_clickEmailLink">お届けしたメール内の\nURLをクリックして\nメールアドレスを更新してください。</string>
    <string name="sended_reset_email_limit">※メールに記載された登録URLの有効期限は10分間です。\n有効期限が切れた場合は再度メールアドレスの変更を実施してください。</string>
    <string name="reset_password_title">パスワード再設定</string>
    <string name="reset_password_caption">新しく設定するパスワードを入力してください。</string>
    <string name="reset_password_button">パスワードを変更する</string>
    <string name="registerFinished_caption">会員登録が完了しました！</string>
    <string name="registerFinished_recommend">お仕事への応募までに身分証のご提出をお願いしております。完了まで最長数日かかるため、事前の身分証確認をおすすめします。</string>
    <string name="change_user_information_success">会員情報を更新しました</string>
    <string name="change_user_information_other_than_phone_success">会員情報を更新しました\n※電話番号は携帯電話番号認証後に更新します</string>
    <string name="change_user_information_only_phone_success">電話番号を更新しました</string>
    <string name="unconfirmed_identification_explain">身分証未確認の項目あり</string>
    <string name="recommend_identification">お仕事への応募までに身分証のご提出をお願いしております。完了まで最長数日かかるため、事前の身分証確認をおすすめします。</string>
    <string name="change"><a href="">変更</a></string>
    <string name="confirmed_identification">身分証確認済み</string>
    <string name="confirming_identification">※身分証確認中：</string>
    <string name="unconfirmed_identification">※身分証未確認</string>
    <string name="denied_identification">※身分証確認失敗：</string>
    <string name="update_identity_caption1_from_entry">お仕事への応募にあたり、身分証の確認の実施をお願いしております。</string>
    <string name="update_identity_caption1_from_change">こちらの項目を更新する際には身分証の確認の実施をお願いしております。</string>
    <string name="update_identity_caption2">身分証確認にあたり、下記が身分証の内容と異なる場合は身分証と一致する情報を入力してください。</string>
    <string name="upload_id_image">身分証確認</string>
    <string name="upload_id_image_caption">身分証確認にあたり、身分証のご提出をお願いしております。\n\n下記のいずれかの写真をお送りください。\n運転免許証／運転経歴証明書／健康保険証／日本のパスポート／マイナンバーカード／住民基本台帳カード／在留カード／特別永住者証明書\n\n※身分証がカード形状の場合、カードのフチまでカード全体が写った画像を使用してください。</string>
    <string name="upload_id_image_kind">身分証の種別</string>
    <string name="upload_id_image_front">表面</string>
    <string name="upload_id_image_back">裏面</string>
    <string name="upload_id_image_back_caption">※住所変更や氏名変更などにより、裏面記載事項がある場合は、裏面の写真も必要です。</string>
    <string name="upload_id_image_passport_face_page">顔写真記載ページ</string>
    <string name="upload_id_image_passport_writing_page">所持人記入欄ページ（最終ページ）</string>
    <string name="upload_id_image_passport_writing_page_caption">※氏名・現住所を記入の上、撮影してください。\n所持人記入欄がないパスポートは使用できませんので、他の身分証を使用してください。</string>
    <string name="upload_id_image_my_number_front">表面（顔写真の面）</string>
    <string name="upload_id_image_my_number_caption">※通知カードは不可です。</string>
    <string name="uploaded_id_image">身分証を送信しました！</string>
    <string name="uploaded_id_image_caption">内容の確認完了まで数分〜数日をいただいております。確認が完了しましたらメールにてご連絡いたします。\n\n確認が完了すると、ご入力いただいた内容がプロフィールに反映されます。</string>
    <string name="failed_upload_id_image_title">身分証確認の実施に失敗しました</string>
    <string name="failed_upload_id_image_sentence">時間をおいて再実施をお願いいたします。</string>
    <string name="register_account_success">口座情報を登録しました</string>
    <string name="change_account_success">口座情報を更新しました</string>
    <string name="jobDetails_workingTime">作業時間（目安）</string>
    <string name="jobDetails_fee">報酬（税込）</string>
    <string name="jobDetails_applyFlow"><a href="">応募後の流れを確認</a></string>
    <string name="jobDetails_limit">納期</string>
    <string name="jobDetails_tool">持ち物</string>
    <string name="jobDetails_workableTime">作業実施\n可能時間帯</string>
    <string name="jobDetails_summary">お仕事概要</string>
    <string name="jobDetails_jobAttachments">添付ファイル</string>
    <string name="jobDetails_summaryTitles">報告箇所</string>
    <string name="jobDetails_workingPlace">場所</string>
    <string name="jobDetails_jobId">お仕事ID</string>
    <string name="jobDetails_workingPlaceLink">この場所のお仕事全て</string>
    <string name="jobDetails_applyFlowCaption">応募後の流れ</string>
    <string name="jobDetails_preEntryFlowCaption">先行応募後の流れ</string>
    <string name="jobDetails_preEntryFlowCaption1">までお待ちください\nマニュアルをお読みいただき、事前に必要な道具の用意をお願いします</string>
    <string name="jobDetails_preEntryFlowCaption2">❷ 作業当日</string>
    <string name="jobDetails_outOfEntryExpire">応募受付期間外のため応募できません</string>
    <string name="jobDetails_entryFinished">受付が終了いたしました</string>
    <string name="jobDetails_cantEntry">キャンセル後一定時間は再応募できません</string>
    <string name="jobDetails_maxEntry">未報告のお仕事が%1$d件以上あるため応募できません</string>
    <string name="jobDetails_advanceEntry">このお仕事は近隣在住の方のみ応募可能です</string>
    <string name="jobDetails_goWorking">に現地で作業後、\n作業報告しましょう！</string>
    <string name="jobDetails_goWorkingByPreEntry">\nに作業を実施してください。</string>
    <string name="jobDetails_overLimit">納期を超過しています</string>
    <string name="jobDetails_pressButton">※現地に着いて、作業開始する時に「作業を開始」ボタンを押してください。</string>
    <string name="jobDetails_pressButtonByPreEntry">※%sになるまで作業を実施することができません。\n作業日までしばらくお待ちください。</string>
    <string name="jobDetails_manualImageURL">https://s3-ap-northeast-1.amazonaws.com/assets.prd.erikura.net/manual_pdfs/manual_thumbnail.png</string>
    <string name="jobDetails_working">作業実施中</string>
    <string name="jobDetails_startTo">開始から</string>
    <string name="jobDetails_finished">作業実施完了</string>
    <string name="jobDetails_endOfWord_limit">以内\n</string>
    <string name="jobDetails_endOfWord_after">後\n</string>
    <string name="report_status">作業報告のステータス</string>
    <string name="report_status_unconfirmed">確認待ち</string>
    <string name="report_status_confirmed">確認済み</string>
    <string name="report_status_reject">差し戻し</string>
    <string name="report_rejected_comment">差し戻しコメント</string>
    <string name="report_accepted_comment">確認済みコメント</string>
    <string name="job_details_reported_additional_summary">マニュアル外の報告</string>
    <string name="disabled_start_working_button">作業日ではありません\n作業日までお待ちください</string>
    <string name="property_notes_title">このお仕事の注意事項</string>
    <string name="property_notes_other_button">その他のFAQを見る</string>
    <string name="preEntryFlowDialog_caption">こちらは先行応募です</string>
    <string name="preEntryFlowDialog_step1">マニュアルをチェックする</string>
    <string name="preEntryFlowDialog_step1Explain">作業内容に加え、「持ち物」「報告箇所」を必ず確認しましょう。</string>
    <string name="preEntryFlowDialog_step2">このお仕事の注意事項をチェックする</string>
    <string name="preEntryFlowDialog_step2Explain">作業時の注意事項がある場合があります。注意事項がある場合は、必ず確認しましょう。</string>
    <string name="preEntryFlowDialog_step3">作業日が来たら作業開始する</string>
    <string name="preEntryFlowDialog_step3Explain1">から作業を実施できます。\n現地に行き作業を実施し、作業報告まで行いましょう。</string>
    <string name="preEntryFlowDialog_step3Explain2">注意１：%sから24時間以内に「作業報告まで実施」してください。</string>
    <string name="preEntryFlowDialog_step3Explain3">注意２：時間内に作業できない場合は「速やかにキャンセル」してください。</string>
    <string name="upload_failed_title">画像をアップできませんでした</string>
    <string name="upload_failed_note">再度アップロードを試みますか？</string>
    <string name="report_draft_message">前回の途中から作業報告を行いますか？\nいいえを選択した場合、前回の入力内容は破棄されます。</string>
    <string name="report_draft_use_draft">はい</string>
    <string name="report_draft_reset">いいえ</string>
    <string name="report_draft_delete_confirm">写真選択に戻りますか？\n戻る場合は入力内容が破棄されます。</string>
    <string name="email">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="send_email">仮登録メールを送信</string>
    <string name="smartPhone">スマホがあればできるお仕事</string>
    <string name="cleaning">ホウキとチリトリがあればできるお仕事</string>
    <string name="walk">徒歩圏内でできるお仕事</string>
    <string name="bicycle">自転車圏内でできるお仕事</string>
    <string name="car">車で通勤するお仕事</string>
    <string name="register">会員登録</string>
    <string name="retry">再試行</string>
    <string name="remove_all_contents">作業報告を中断する</string>
    <string name="register_email_hint">例）sample@erikura.net</string>
</resources>