<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jp.co.recruit.erikura.presenters.activities.registration.RegisterWishWorkViewModel" />
        <variable
            name="handlers"
            type="jp.co.recruit.erikura.presenters.activities.registration.RegisterWishWorkEventHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/paleGrey"
                    android:orientation="vertical">

                    <TextView
                        style="@style/titleLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/registerWishWork_caption" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/background_triangle" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="10dp"
                    style="@style/buttonWithCheckBox"
                    android:text="@string/smartPhone"
                    android:checked="@={viewModel.interestedSmartPhone}"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="10dp"
                    style="@style/buttonWithCheckBox"
                    android:text="@string/cleaning"
                    android:checked="@={viewModel.interestedCleaning}"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="10dp"
                    style="@style/buttonWithCheckBox"
                    android:text="@string/walk"
                    android:checked="@={viewModel.interestedWalk}"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="10dp"
                    style="@style/buttonWithCheckBox"
                    android:text="@string/bicycle"
                    android:checked="@={viewModel.interestedBicycle}"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    style="@style/buttonWithCheckBox"
                    android:text="@string/car"
                    android:checked="@={viewModel.interestedCar}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        style="@style/linkText"
                        android:text="@string/registerEmail_terms_of_service"
                        android:onClick="@{handlers::onClickTermsOfService}"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:textColor="@color/blackTwo"
                        android:text="@string/registerEmail_comma"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        style="@style/linkText"
                        android:text="@string/registerEmail_privacy_policy"
                        android:onClick="@{handlers::onClickPrivacyPolicy}"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:textColor="@color/blackTwo"
                        android:text="@string/registerEmail_agree"
                        />

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    style="@style/primaryButton"
                    android:text="@string/register"
                    android:enabled="@{viewModel.isRegisterButtonEnabled()}"
                    android:onClick="@{handlers::onClickRegister}" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>