<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view_model"
            type="jp.co.recruit.erikura.presenters.activities.registration.RegisterEmailViewModel" />
        <variable
            name="handlers"
            type="jp.co.recruit.erikura.presenters.activities.registration.SendEmailEventHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_email_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presenters.activities.registration.RegisterEmailActivity"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/paleGrey"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    style="@style/titleLabel"
                    android:text="@string/registerEmail_caption" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/fieldLabel"
                    android:layout_marginTop="40dp"
                    android:text="@string/email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    style="@style/textField"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:text="@={view_model.email}"
                    android:hint="@string/register_email_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="@{view_model.error.visibility}"
                    style="@style/errorField"
                    android:text="@={view_model.error.message}"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/smallCaption"
                    android:text="@string/registerEmail_accept"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    style="@style/linkText"
                    android:text="@string/registerEmail_terms_of_service"
                    android:onClick="@{handlers::onClickTermsOfService}"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/blackTwo"
                    android:text="@string/registerEmail_comma"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    style="@style/linkText"
                    android:text="@string/registerEmail_privacy_policy"
                    android:onClick="@{handlers::onClickPrivacyPolicy}"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/blackTwo"
                    android:text="@string/registerEmail_agree"
                    />

            </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    style="@style/primaryButton"
                    android:text="@string/send_email"
                    android:enabled="@{view_model.isRegisterEmailButtonEnabled()}"
                    android:onClick="@{handlers::onClickSendEmail}"
                    />


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>