<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data></data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_failed_title"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/upload_failed_note"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/upload_failed_retry_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                style="@style/secondaryButton"
                android:text="@string/retry"
                />

            <Button
                android:id="@+id/upload_failed_remove_button"
                style="@style/tertiaryButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/remove_all_contents" />

        </LinearLayout>
    </ScrollView>
</layout>