<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view_model"
            type="jp.co.recruit.erikura.presenters.activities.LoginViewModel" />
        <variable
            name="handlers"
            type="jp.co.recruit.erikura.presenters.activities.LoginEventHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presenters.activities.LoginActivity">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorLightGray"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    style="@style/titleLabel"
                    android:text="@string/login_caption" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/fieldLabel"
                    android:layout_marginTop="40dp"
                    android:text="@string/email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    style="@style/textField"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    android:text="@={view_model.email}"
                    android:hint="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/fieldLabel"
                    android:layout_marginTop="40dp"
                    android:text="@string/password" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    style="@style/passwordField"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:text="@={view_model.password}"
                    android:hint=""/>

                <CheckBox
                    android:theme="@style/erikuraCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_autoLogin"
                    android:textColor="@color/colorBlack"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    style="@style/primaryButton"
                    android:text="@string/login"
                    android:onClick="@{handlers.onClickLogin}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorLightBlueGreen"
                    android:text="@string/login_remindPassword"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_gravity="center"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorLightBlueGreen"
                    android:text="@string/login_mailUnreachable"
                    />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>